v1.4.6 (21/01/2020)
- added xia2-* wildcard to read_write_autoprocessing_results_from_to_disc because autoprocessing folder names changed

v1.4.5 (16/01/2020)
- bug fix: removing and re-parsing of folders from project directory does not need the DataProcessingAutoAssigned flag to be reset if the MTZ file does not exist

v1.4.4 (10/01/2020)
- bug fix: corrected pandda.analyse keyword 'exclude_from_z_map_analysis'

v1.4.3 (10/01/2020)
- added additional error message during pandda.export in case of missing ensemble model

v1.4.2 (17/12/2019)
- bug fix: arbitrary clicking order for atoms making a new covalent link

v1.4.1 (16/12/2019)
- bug fix: in helpers/assign_stereochemistry.py; use CompoundSMILES instead of CompoundSMILESproduct (which need to be provided by user)
- bug fix: auto-fitting of ligands - use default ccp4 distribition and submission command
- bug fix: add 'module load mx' to restraints generation script; uses default ccp4 installation, otherwise CLIB path for GRADE broken

v1.4.0 (03/12/2019)
- introduced simple semantic versioning according to https://semver.org

v1.3.8.19 (02/12/2019)
- bug fix: xce to read resolution at Mn(I)/sig(I) of 2.0 (and 1.5 if possible) from aimless log; now only reads either one or the other. Datasets table now only shows reso at 2.0 since 1.5 not always shown
- bug fix: read gda barcodes into DB and display in datasets table

v1.3.8.18 (25/11/2019)
- bug fix: added except statement in get_gda_barcodes to catch errors during parsing of multiple visits

v1.3.8.17 (20/11/2019)
- bug fix: refine routine in XChemCootReference.py did not contain argument for covalent bonds

v1.3.8.16 (17/10/2019)
- added CompoundSMILESproduct field in DB to provide SMILES string of product of covalent binders
- new function to use phenix.ligandfit and rhofit to fit ligands into initial maps (all enantiomers are tried and best one is selected)

v1.3.8.15 (15/10/2019) 