@@ -2432,8 +2432,11 @@ class read_write_autoprocessing_results_from_to_disc(QtCore.QThread):
                 [   os.path.join('xia2', '*'),
                     os.path.join('LogFiles', '*aimless.log'),
                     os.path.join('DataFiles', '*free.mtz')],
-                [   os.path.join('xia2-*', '*'),
+                [   os.path.join('xia2-3*', '*'),
                     os.path.join('LogFiles', '*aimless.log'),
+                    os.path.join('DataFiles', '*free.mtz')],
+                [   os.path.join('xia2-dials*', '*'),
+                    os.path.join('LogFiles', '*merging-statistics.json'),
                     os.path.join('DataFiles', '*free.mtz')],
                 [   os.path.join('multi-xia2', '*'),
                     os.path.join('LogFiles', '*aimless.log'),
